# my-renderer

./: CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  framebuffer.tga
include/: model.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.cpp
src/: main.cpp
